Added some NFD functions